--- a/files/styling.css
+++ b/files/styling.css
@@ -67,8 +67,8 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 70%;
-    width: 60%;
+    height: auto;
+    width: auto;
     background-color: gray;
     border-radius: 10px;
     padding: 20px;
