--- a/files/fonts.css
+++ b/files/fonts.css
@@ -57,8 +57,8 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
-.grenze-gothic {
-    font-family: 'Grenze Gothic', serif;
+.grenze-gotisch {
+    font-family: 'Grenze Gotisch', serif;
 }
 
 .fredoka-one {
