--- a/files/styling.css
+++ b/files/styling.css
@@ -1,12 +1,30 @@
 html, body {
+    /* Remove flex centering for mobile, use block layout */
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     background-color: #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    box-sizing: border-box;
+}
+
+@media (max-width: 600px) {
+    html, body {
+        display: block !important;
+        min-height: 100vh;
+        width: 100vw;
+        overflow-x: hidden;
+        box-sizing: border-box;
+    }
+    #formContainer {
+        padding: 1em 0.5em 1em 0.5em;
+        max-width: 100vw;
+        width: 100vw;
+        left: 0;
+        right: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
 }
 
 #factionCheck {
